# screened_coulomb

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: Documentation
doc/: screened_coulomb.dox  screened_coulomb.md
include/: screened_coulomb.h
test/: test.cpp
tests/: test.cpp
